--- a/src/components/Tiles.css
+++ b/src/components/Tiles.css
@@ -1,6 +1,6 @@
 .tile-container {
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     gap: 2rem;
     max-width: 900px;
     margin: 2rem auto 0;
@@ -11,6 +11,7 @@
     perspective: 1200px;
     aspect-ratio: 1 / 1;
     width: 100%;
+    min-height: 250px;
     /* margin: 10px 0; */
   }
   
